--- a/charts/unicorn-history-server/templates/deployment.yaml
+++ b/charts/unicorn-history-server/templates/deployment.yaml
@@ -12,9 +12,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "yunikorn-history-server.fullname" . }}
+  name: {{ include "unicorn-history-server.fullname" . }}
   labels:
-    {{- include "yunikorn-history-server.labels" . | nindent 4 }}
+    {{- include "unicorn-history-server.labels" . | nindent 4 }}
     {{- with .Values.global.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -26,18 +26,18 @@ spec:
   replicas: {{ $replicaCount }}
   selector:
     matchLabels:
-      {{- include "yunikorn-history-server.selectorLabels" . | nindent 6 }}
+      {{- include "unicorn-history-server.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "yunikorn-history-server.labels" . | nindent 8 }}
+        {{- include "unicorn-history-server.labels" . | nindent 8 }}
         {{- with .Values.global.labels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
       containers:
-        - name: "yunikorn-history-server"
-          image: "{{ include "yunikorn-history-server.image" . }}"
+        - name: "unicorn-history-server"
+          image: "{{ include "unicorn-history-server.image" . }}"
           imagePullPolicy: "{{ $imagePullPolicy }}"
           args:
             - "--config"
@@ -46,17 +46,17 @@ spec:
             - mountPath: /app/config
               name: config
           env:
-            - name: YHS_DB_PASSWORD
+            - name: UHS_DB_PASSWORD
               {{- if $passwordSecretRef }}
               valueFrom:
                 secretKeyRef:
                   name: {{ $passwordSecretRef }}
-                  key: YHS_DB_PASSWORD
+                  key: UHS_DB_PASSWORD
               {{- else }}
               value: {{ $dbPassword | quote }}
               {{- end }}
           ports:
-            - containerPort: {{ .Values.yhs.port }}
+            - containerPort: {{ .Values.uhs.port }}
               name: http
               protocol: TCP
           livenessProbe:
@@ -74,4 +74,4 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: {{ include "yunikorn-history-server.fullname" . }}
+            name: {{ include "unicorn-history-server.fullname" . }}
