--- a/config/unicorn-history-server/config.yml
+++ b/config/unicorn-history-server/config.yml
@@ -6,7 +6,7 @@ yunikorn:
 db:
   host: postgresql
   port: 5432
-  dbname: yhs
+  dbname: uhs
   user: postgres
   password: psw
   pool_max_conns: 0
@@ -14,7 +14,7 @@ db:
   pool_max_conn_lifetime: 1800s
   pool_max_conn_idle_time: 120s
 
-yhs:
+uhs:
   port: 8989
   data_sync_interval: 5m
   cors:
